# paper_guo_2023_humanoids_lifting_risk_prediction

./: README.md
papers/Guo-2023-Humanoids-Lifting-risk-prediction/src/: bibtex.bib  refs.bib  root.tex
papers/Guo-2023-Humanoids-Lifting-risk-prediction/src/sections/: 00_abstract.tex  01_introduction.tex  02_background.tex  03_methods.tex  04_validation.tex  05_conclusions.tex
src_risk_prediction/: mainUtilities.py  runOnlineDataStream.py
src_risk_prediction/niosh_method/: main_online_animation_joint_angle_prediction.py  main_online_animation_wrench_prediction.py  nioshConfiguration.py  nioshFactorsAnimation.py  nioshOnlineInferenceTemp.py  nioshResultsAnimation.py  nioshUtilities.py  runAnimators.sh  runNoishOnline.py
src_risk_prediction/python_wrapper/: CMakeLists.txt  hdeModulePythonWrapper.i  viewIHumanDatas.cpp  viewIHumanDatas.h
src_risk_prediction/visualizer/: runHumanModelVisualizer.py
src_state_estimation/scripts/MoE/: evaluator.py  makeLargeDataSet.py
